--- a/css/components/button.css
+++ b/css/components/button.css
@@ -1,3 +1,4 @@
+
 .btn { 
   font-family: "Hammersmith One";
   font-size: 16px;
@@ -12,7 +13,6 @@
   cursor: pointer;
   outline: none;
   position: relative;
-  /* z-index: 1; */
 }
 .btn-large { 
   width: 140px;
@@ -27,6 +27,8 @@
   background: rgba(0, 224, 208, 1);
   top: 0; left: 50%;
   z-index: -1;
+  -webkit-transition: all 200ms ease;
+  -o-transition: all 200ms ease;
   transition: all 200ms ease;
 }
 .btn:hover::before{
@@ -35,7 +37,11 @@
   width: 100%; height: 100%;
   top: 0; left: 0%;
   z-index: -1;
+  -webkit-transition: all 300ms ease;
+  -o-transition: all 300ms ease;
   transition: all 300ms ease;
+  background: -webkit-gradient(linear, left top, right top, from(#00e0d0), to(#4aa3cc));
+  background: -o-linear-gradient(left, #00e0d0 0%, #4aa3cc 100%);
   background: linear-gradient(to right, #00e0d0 0%, #4aa3cc 100%);
 } 
 
