--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -1,7 +1,16 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 .card { 
+  display: -webkit-box; 
+  display: -ms-flexbox; 
   display: flex;
-  flex-direction: column;  
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;  
+  -webkit-box-align: center;  
+      -ms-flex-align: center;  
+          align-items: center;
 }
 .card-title {
   color: #413d4b;
@@ -17,6 +26,8 @@
   letter-spacing: 0.7px;
 }
 .section-expertise .card  .icon { 
+  background: -webkit-gradient(linear, left top, right top, from(#00e0d0), to(#4aa3cc)); 
+  background: -o-linear-gradient(left, #00e0d0 0%, #4aa3cc 100%); 
   background: linear-gradient(to right, #00e0d0 0%, #4aa3cc 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
