--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,3 +1,5 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 .footer {
   padding: 70px 0;
   position: relative;
@@ -17,8 +19,12 @@
   letter-spacing: 0.75px;
 }
 .footer-address {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: baseline;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
 .address { 
   margin: 0;
@@ -41,9 +47,15 @@
   border: 1px solid #fff;
   border-radius: 50%;
   padding: 11px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .social-link:not(:last-child) { 
   margin-right: 6px;
@@ -60,8 +72,12 @@
 }
 
 .footer .speciall-content {
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .footer .speciall-links li { 
   margin-right: 35px;
