--- a/css/components/grid.css
+++ b/css/components/grid.css
@@ -1,21 +1,35 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 .grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .grid-header { 
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center; 
+      -ms-flex-align: center; 
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .grid-story {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: minmax(200px, 315px) 100px minmax(400px, 640px);
   grid-template-columns: minmax(200px, 315px) minmax(400px, 640px);
-  column-gap: 100px;
+  -webkit-column-gap: 100px;
+     -moz-column-gap: 100px;
+          column-gap: 100px;
   justify-items: left; 
 
 }
 .grid-story .grid-item:first-of-type { 
-  justify-self: center;
+  -ms-grid-column-align: center; 
+      justify-self: center;
 }
 
 .grid-cards {
@@ -31,8 +45,12 @@
   padding: 10px;
 }
 .grid-works { 
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify; 
+      -ms-flex-pack: justify; 
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .grid-contacts {
   margin: 0 -50px;
