--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -1,3 +1,5 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 .nav .nav-list-item:not(:last-child) { 
   margin-right: 25px;
 }
